@@ -1,8 +1,9 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/clusterD.R
 \name{clusterD}
-\alias{cluster01}
 \alias{clusterD}
+\alias{cluster01}
+\alias{cluster01}
 \alias{clusterK}
 \title{Cluster distance matrix from subsampling}
 \usage{
@@ -221,4 +222,3 @@ minSize=5, removeSil=TRUE)
 clustSubTight_test2 <- clusterD(simData, clusterFunction="tight", alpha=0.1,
 clusterArgs=list(evalClusterMethod="average"))
 }
-
