@@ -3,13 +3,13 @@
 \docType{methods}
 \name{clusterSingle}
 \alias{clusterSingle}
-\alias{clusterSingle,ClusterExperiment,missing-method}
-\alias{clusterSingle,ClusterExperiment-method}
-\alias{clusterSingle,SummarizedExperiment,missing-method}
-\alias{clusterSingle,matrix,missing-method}
-\alias{clusterSingle,matrix-method}
-\alias{clusterSingle,matrixOrMissing,matrixOrMissing-method}
 \alias{clusterSingle-methods}
+\alias{clusterSingle,matrix-method}
+\alias{clusterSingle,ClusterExperiment-method}
+\alias{clusterSingle,matrix,missing-method}
+\alias{clusterSingle,matrixOrMissing,matrixOrMissing-method}
+\alias{clusterSingle,SummarizedExperiment,missing-method}
+\alias{clusterSingle,ClusterExperiment,missing-method}
 \title{General wrapper method to cluster the data}
 \usage{
 \S4method{clusterSingle}{matrixOrMissing,matrixOrMissing}(x, diss,
@@ -108,4 +108,3 @@ subsample=FALSE, sequential=FALSE, clusterDArgs=list(k=3))
 \seealso{
 \code{\link{clusterMany}} to compare multiple choices of parameters.
 }
-
