@@ -16,4 +16,3 @@ the number of samples.
 Given an object that describes a model or a dataset, it returns the number of
 samples.
 }
-
